fix main class of gradle build

--- a/java-algo/build.gradle
+++ b/java-algo/build.gradle
@@ -18,7 +18,7 @@ sourceCompatibility = JavaVersion.VERSION_1_10
 targetCompatibility = JavaVersion.VERSION_1_10
 
 // Define the main class for the application
-mainClassName = 'com.c1games.terminal.starteralgo.StarterAlgo'
+mainClassName = 'com.c1games.terminal.myalgo.MyAlgo'
 
 dependencies {
     // Use JUnit test framework
